--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -5,6 +5,7 @@
 .wrapper {
   display: flex;
   align-items: center;
+  gap: 60px
 }
 
 .imageContainer {
@@ -13,7 +14,9 @@
 
 .circle_1 {
   position: absolute;
+  left: -10%;
   z-index: -1;
+  animation: floatCircle1 5s ease-in-out infinite;
 }
 
 .circle_2 {
@@ -21,13 +24,15 @@
   z-index: -1;
   top: 22%;
   left: 0;
+  animation: floatCircle2 6s ease-in-out infinite;
 }
 
 .circle_3 {
   position: absolute;
   z-index: -1;
   top: 34%;
-  right: 0;
+  right: -6%;
+  animation: floatCircle3 7s ease-in-out infinite;
 }
 
 .circle_4 {
@@ -35,6 +40,7 @@
   z-index: -3;
   top: 44%;
   right: 4%;
+  animation: floatCircle4 8s ease-in-out infinite;
 }
 
 .portrait {
@@ -42,26 +48,201 @@
   height: 856px;
   object-fit: contain;
   display: block;
+  object-position: bottom;
 }
 
-.circle_1 {
-  animation: floatCircle1 5s ease-in-out infinite;
-  /* Rest of your styles */
+.textContainer {
+  max-width: 876px;
+  width: 100%;
 }
 
-.circle_2 {
-  animation: floatCircle2 6s ease-in-out infinite;
-  /* Rest of your styles */
+.name {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 36px;
+  display: block;
 }
 
-.circle_3 {
-  animation: floatCircle3 7s ease-in-out infinite;
-  /* Rest of your styles */
+.link {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 22px;
+  color: #d3464f;
+  text-decoration: none;
+  transition: 0.5s ease-in-out;
+  margin: 12px 0 0;
+  display: block;
 }
 
-.circle_4 {
-  animation: floatCircle4 8s ease-in-out infinite;
-  /* Rest of your styles */
+.link:hover {
+  opacity: 0.8;
+}
+
+.subtitle {
+  font-size: 64px;
+  line-height: 36px;
+  margin: 0;
+}
+
+.text {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+.listTitle {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 22px;
+}
+
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  padding-left: 16px;
+  margin: 0;
+}
+
+.listItems {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 22px;
+}
+
+@media screen and (max-width: 1024px) {
+  .block {
+    padding: 56px 0;
+  }
+
+  .textContainer {
+    max-width: 600px;
+  }
+
+
+  .subtitle {
+    font-size: 40px;
+    font-weight: 400;
+    line-height: 36px;
+  }
+
+  .name {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+
+  }
+
+  .link {
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    display: block;
+    margin-top: 8px;
+  }
+
+  .circle_1 {
+    top: 20%;
+  }
+
+  .circle_2 {
+    top: 36%;
+    left: 0;
+  }
+
+  .circle_3 {
+    top: 50%;
+    right: -6%;
+  }
+
+  .circle_4 {
+    top: 60%;
+    right: 0;
+  }
+}
+
+
+@media screen and (max-width: 786px) {
+  .wrapper {
+    flex-direction: column;
+  }
+
+  .textContainer {
+    padding: 0 16px;
+    margin: -350px 0 0;
+  }
+
+  .subtitle {
+    text-align: right;
+  }
+
+  .name {
+    max-width: 260px;
+    text-align: right;
+    margin-left: auto;
+    margin-top: 8px;
+  }
+
+  .link {
+    text-align: right;
+    display: block;
+    margin-top: 8px;
+  }
+
+  .imageContainer {
+    width: 100%;
+    height: 400px;
+  }
+
+  .portrait {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 102px;
+    height: 400px;
+  }
+
+  .circle_1 {
+    top: -20%;
+    left: -6%;
+    width: 100px;
+  }
+
+  .circle_3 {
+    top: 24%;
+    left: 6%;
+    width: 70px;
+  }
+
+  .circle_4 {
+    top: 0;
+    left: 8%;
+    width: 80px;
+  }
+
+  .circle_2 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .circle_1 {
+    top: -20%;
+    left: -10%;
+    width: 100px;
+  }
+
+  .circle_3 {
+    top: 24%;
+    left: 12%;
+    width: 70px;
+  }
+
+  .circle_4 {
+    top: 0;
+    left: 16%;
+    width: 80px;
+  }
 }
 
 @keyframes floatCircle1 {
@@ -97,66 +278,5 @@
   }
   50% {
     transform: translate(-10px, 20px);
-  }
-}
-
-.textContainer {
-  margin-left: auto;
-  max-width: 876px;
-  width: 100%;
-}
-
-.link {
-  font-size: 36px;
-  font-weight: 700;
-  line-height: 22px;
-  color: #d3464f;
-  text-decoration: none;
-  transition: 0.5s ease-in-out;
-}
-
-.link:hover {
-  opacity: 0.8;
-}
-
-.subtitle {
-  font-size: 64px;
-  line-height: 36px;
-  margin: 0;
-}
-
-.text {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 22px;
-}
-
-.listTitle {
-  font-size: 14px;
-  font-weight: 700;
-  line-height: 22px;
-}
-
-.list {
-  display: flex;
-  flex-direction: column;
-  gap: 6px;
-  padding-left: 16px;
-  margin: 0;
-}
-
-.listItem {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 22px;
-}
-
-@media screen and (max-width: 786px) {
-  .wrapper {
-    flex-direction: column-reverse;
-  }
-
-  .textContainer {
-    padding: 0 16px;
   }
 }
