--- a/src/components/Lead/Lead.module.css
+++ b/src/components/Lead/Lead.module.css
@@ -18,6 +18,7 @@
   border: 2px solid #fff;
   padding: 2px;
   max-width: 724px;
+  text-align: center;
 }
 
 .textContainer {
@@ -61,6 +62,16 @@
 
 .marqueeRight {
   animation: marqueeRight 70s linear infinite;
+}
+
+@media screen and (max-width: 768px) {
+  .title {
+    font-size: 12px;
+    line-height: 22px;
+    max-width: 382px;
+    text-align: center;
+    margin-left: 12px;
+  }
 }
 
 
