--- a/src/components/Podcasts/Podcasts.module.css
+++ b/src/components/Podcasts/Podcasts.module.css
@@ -16,19 +16,46 @@
   margin: 36px 0 0;
 }
 
+.podcast {
+  display: flex;
+  align-items: center;
+  transition: 0.3s ease-in-out;
+  height: 210px;
+}
+
+.podcast:hover {
+  transform: scale(1.1);
+}
+
 .image {
-  position: relative;
-  width: 100%;
+  border-radius: 12px;
 }
 
-.play {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: transform 0.3s ease;
+@media screen and (max-width: 786px) {
+  .wrapper {
+    padding: 0 8px;
+  }
+
+  .title {
+    font-size: 36px;
+    line-height: 40px;
+  }
+
+  .podcasts {
+    padding: 0 8px;
+  }
+
+  .link {
+    width: 100%;
+  }
+
+  .image {
+    width: 100%;
+  }
 }
 
-.play:hover {
-  transform: translate(-50%, -50%) scale(1.2);
+@media screen and (max-width: 568px) {
+  .image {
+    width: 100%;
+  }
 }
