--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -1,8 +1,13 @@
+.block {
+  background-color: #313131;
+}
+
 .slideContainer {
   display: flex;
   justify-content: space-between;
-  background: linear-gradient(90deg, #313131 63.69%, rgba(0, 0, 0, 0.00) 75.63%);
+  background: linear-gradient(90deg, #313131 70%, rgba(0, 0, 0, 0.00) 75%);
   z-index: 22;
+  height: 488px;
 }
 
 .logo {
@@ -32,8 +37,45 @@
 }
 
 .banner {
-  max-width: 600px;
+  max-width: 620px;
   width: 100%;
-  height: 488px;
+  height: 100%;
   z-index: -3;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 1024px) {
+  .slideContainer {
+    flex-direction: column;
+    justify-content: center;
+    background-color: #313131;
+    height: 460px;
+  }
+
+  .textContainer {
+    flex-direction: column;
+    padding: 8px 16px;
+    gap: 0;
+  }
+
+  .list {
+    max-width: 460px;
+  }
+
+  .banner {
+    display: none;
+  }
+}
+
+
+@media screen and (max-width: 786px) {
+  .logo {
+    max-width: 140px;
+    padding: 0;
+  }
+
+  .listItem {
+    font-size: 12px;
+    line-height: 20px;
+  }
 }
